# pytrackmate

./: .gitignore  LICENSE  README.md  environment.yml  pyimagej_examples.ipynb  pyproject.toml  setup.py  test.py  test2.py  trackmate_script.py
.github/workflows/: docker-image.yml
Containers/TrackMate/: ApptainerBuild.slurm  ApptainerRun.slurm  BuildApptainer.slurm  Dockerfile  build_apptainer.slurm  entrypoint.sh  quality_histograms.py  quality_histograms.slurm  read_settings_and_process_mpt_tiff.py  requirements.txt  run_apptainer.slurm  settings.json
models/trackmate/: basic_settings.xml
notebooks/: pyimagej_examples.ipynb
pytrackmate/: pyimagej_examples.ipynb  thresholds.py  trackmate_mpt_script.py  trackmate_parallel.py  trackmate_utils.py  utils.py
pytrackmate/tests/: test_thresholds.py
scripts/: split_nd2_videos.py
