[build-system]
requires = ["setuptools >= 64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytrackmate"
version = "1.0.0"
dependencies = [
    "numpy",
    "pandas"
]
requires-python = ">=3.8"
readme = "README.md"
classifiers = ["Programming Language :: Python"]
description = "Automated tracking and processing of MPT videos"